# gospel

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  commands.md  pyproject.toml  requirements.txt  setup.py  vercel.json
core/: Cargo.toml
core/src/: buhera_east.rs  cellular_information.rs  environmental_gradient.rs  error.rs  fuzzy_bayesian.rs  genomics.rs  harare_algorithm.rs  honjo_masamune.rs  integration.rs  lib.rs  mufakose_search.rs  oscillatory_reality.rs  s_entropy.rs  stella_lorraine.rs  tributary_streams.rs  types.rs  universal_solvability.rs  utils.rs
core/src/integration/: orchestration.rs  performance_optimization.rs  unified_engine.rs  validation.rs
gospel-rust/: Cargo.toml
gospel-rust/src/: circuit.rs  experiment.rs  expression.rs  fuzzy.rs  genomic_models.rs  lib.rs  network.rs  network_analysis.rs  network_processor.rs  python.rs  turbulance.rs  utils.rs  variant.rs
new_testament/: INSTALL.md  MANIFEST.in  PUBLICATION_GUIDE.md  PYTHON_3_13_COMPATIBILITY.md  README.md  SEQUENCE_ANALYSIS_README.md  VCF_ANALYSIS_README.md  comprehensive_sequence_demo.py  dante_labs_demo.py  integrated_genomic_demo.py  pyproject.toml  requirements.txt  setup.py  test_with_fasta.py  verify_setup.py
new_testament/.run/: regular.run.xml
new_testament/data/: results_current_flow_validation_20260224_210052_cb0a83cc.json  results_current_flow_validation_20260224_210156_1584d1a5.json  results_nucleic_acid_computing_20260224_230856_fdec78fe.json  results_nucleic_acid_derivation_20260224_230855_a0f7b747.json  results_origins_of_complexity_20260224_230855_6a375126.json  results_proton_flux_validation_20260224_210302_ecec2e70.json  results_temporal_charge_dynamics_20260224_230855_df8b6db3.json
new_testament/data/figures/: captions.tex
new_testament/docs/bayesian-networks/: genomic-bayesian-networks.aux  genomic-bayesian-networks.bbl  genomic-bayesian-networks.blg  genomic-bayesian-networks.out  genomic-bayesian-networks.tex  genomic-bayesian-networks.toc  genomic_bayesian_networks.bib
new_testament/docs/bounded-systems/: partition-coordinate-geometry-bounded-systems.aux  partition-coordinate-geometry-bounded-systems.bbl  partition-coordinate-geometry-bounded-systems.blg  partition-coordinate-geometry-bounded-systems.out  partition-coordinate-geometry-bounded-systems.toc
new_testament/docs/c-value-paradox/: references.bib  resolution-of-c-value-paradox.aux  resolution-of-c-value-paradox.bbl  resolution-of-c-value-paradox.blg  resolution-of-c-value-paradox.out  resolution-of-c-value-paradox.tex  resolution-of-c-value-paradox.toc
new_testament/docs/c-value-paradox/sections/: adaptive-immunity.tex  categorical-mimicry.tex  (+4 more)
new_testament/docs/categorical-partitioning/: categorical-partitioning-mechanisms.aux  categorical-partitioning-mechanisms.blg  categorical-partitioning-mechanisms.out
new_testament/docs/genome-derivation/: genome-from-first-principles.tex  genome_derivation.bib
new_testament/docs/origins-of-life/: origins-of-life.aux  origins-of-life.bbl  origins-of-life.blg  origins-of-life.out  origins-of-life.tex
new_testament/docs/oscillatory-genomics/: oscillatory-genome-networks.aux  oscillatory-genome-networks.bbl  oscillatory-genome-networks.blg  oscillatory-genome-networks.out  oscillatory-genome-networks.tex  oscillatory-genome-networks.toc  oscillatory_genomics.bib
new_testament/docs/petos-paradox/: petos-paradox-resolution-arxiv.tex  references.bib  resolution-petos-paradox.aux  resolution-petos-paradox.bbl  resolution-petos-paradox.blg  resolution-petos-paradox.out  resolution-petos-paradox.tex
new_testament/docs/pharmacogenomics/: pharmaceutical-oscillatory-response.tex  pharmaceutical_oscillatory.bib
new_testament/docs/sources/: biological-current-flux.tex  biological-partition-landscape.tex  charge-dynamics.tex
new_testament/docs/structural-derivation/: VALIDATION_SUMMARY.md  derivation-of-genome-partition-coordinates.aux  derivation-of-genome-partition-coordinates.bbl  derivation-of-genome-partition-coordinates.blg  derivation-of-genome-partition-coordinates.out  derivation-of-genome-partition-coordinates.tex  derivation-of-genome-partition-coordinates.toc  references.bib
new_testament/public/: GFX0436892.cnv.vcf.gz.tbi  GFX0436892.filtered.indel.vcf.gz.tbi  GFX0436892.filtered.snp.vcf.gz.tbi
new_testament/publication/: generate_validation_figures.py  validation_experiments.py
new_testament/publication/nucleic-acid-charge-dynamics/: nucleic-acid-temporal-charge-dynamics.aux  nucleic-acid-temporal-charge-dynamics.bbl  nucleic-acid-temporal-charge-dynamics.blg  nucleic-acid-temporal-charge-dynamics.out  nucleic-acid-temporal-charge-dynamics.tex  references.bib
new_testament/publication/nucleic-acid-computing/: nucleic-acid-computing.aux  nucleic-acid-computing.bbl  nucleic-acid-computing.blg  nucleic-acid-computing.out  nucleic-acid-computing.tex  references.bib
new_testament/publication/nucleic-acid-derivation/: nucleic-acid-derivation.aux  nucleic-acid-derivation.bbl  nucleic-acid-derivation.blg  nucleic-acid-derivation.out  nucleic-acid-derivation.tex  references.bib
new_testament/publication/origins-of-complexity/: origins-of-complexity.aux  origins-of-complexity.bbl  origins-of-complexity.blg  origins-of-complexity.out  origins-of-complexity.tex  references.bib
new_testament/src/physics/: VALIDATION_README.md  __init__.py  genomic_charged_fluid.py  genomic_real_data_validation.py  genomic_visualization.py  genomic_visualizations.py  hbond_charge_oscillation.py  proton_trajectory_validation.py  run_genomic_validation.py  run_proton_validation.py  test_validation.py  validation_report.json
new_testament/src/st_stellas/: __init__.py
new_testament/src/theory/: __init__.py  aging_nuclear_pore.py  alternative_splicing.py  charge_avalanche.py  chromatin_breathing.py  metabolic_charge_flux.py  neurodegeneration.py  nucleosome_dynamics.py  okazaki_fragments.py  unified_framework.py  warburg_effect.py
new_testament/src/whole_genome_sequencing/: __init__.py
new_testament/tests/: __init__.py  test_installation.py
(+265 files in other folders)
