[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gospel"
version = "0.1.0"
description = "Genomic analysis framework for sprint performance with LLM integration"
readme = "README.md"
authors = [
    {name = "Kundai Sachikonye", email = "kundai.sachikonye@bitspark.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
    "biopython>=1.79",
    "networkx>=2.6.0",
    "langchain>=0.0.267",
    "torch>=2.0.0",
    "transformers>=4.15.0",
    "pdfplumber>=0.7.0",
    "chromadb>=0.4.0",
    "PyMuPDF>=1.20.0",
    "pytesseract>=0.3.0",
    "ollama>=0.0.2"
]
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/fullscreen-triangle/gospel"
"Bug Tracker" = "https://github.com/fullscreen-triangle/gospel/issues"

[project.scripts]
gospel = "gospel.cli.main:main"
